[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Vs30"
version = "2.0"
description = "NZ Vs30 Calculation"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "geopandas",
    "typer",
    "pydantic>=2.0",
    "threadpoolctl",
    "qcore-utils",
    "rasterio",
    "tqdm",
    "pyyaml",
    "shapely",
    "GDAL",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/ucgmsim/Vs30"

[project.scripts]
vs30 = "vs30.cli:app"

[tool.setuptools]
packages = ["vs30"]

[tool.setuptools.package-data]
vs30 = [
    "data/*.csv",
    "data/*.ll",
    "data/*.ssv",
    "data/*.tif",
    "data/*.qgz",
    "data/coast/*",
    "data/qmap/*",
    "resources/**/*.csv",
    "resources/**/*.yaml",
    "resources/**/*.npy",
]

[tool.ruff]
exclude = ["VsViewer", "build", "temp"]

[tool.deptry]
exclude = ["VsViewer", "build", "temp"]

[tool.deptry.package_module_name_map]
scikit-learn = ["sklearn"]
qcore-utils = ["qcore"]
pyyaml = ["yaml"]
GDAL = ["osgeo"]

[tool.deptry.per_rule_ignores]
DEP001 = ["conftest", "setuptools"]
DEP003 = ["setuptools"]
DEP004 = ["pytest"]
